; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_construct_max_power_limits_table.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_construct_max_power_limits_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { %struct.TYPE_3__, %struct.smu8_hwmgr* }
%struct.TYPE_3__ = type { %struct.phm_clock_voltage_dependency_table* }
%struct.phm_clock_voltage_dependency_table = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64, i32 }
%struct.smu8_hwmgr = type { %struct.smu8_sys_info }
%struct.smu8_sys_info = type { i32* }
%struct.phm_clock_and_voltage_limits = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pp_hwmgr*, %struct.phm_clock_and_voltage_limits*)* @smu8_construct_max_power_limits_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smu8_construct_max_power_limits_table(%struct.pp_hwmgr* %0, %struct.phm_clock_and_voltage_limits* %1) #0 {
  %3 = alloca %struct.pp_hwmgr*, align 8
  %4 = alloca %struct.phm_clock_and_voltage_limits*, align 8
  %5 = alloca %struct.smu8_hwmgr*, align 8
  %6 = alloca %struct.smu8_sys_info*, align 8
  %7 = alloca %struct.phm_clock_voltage_dependency_table*, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %3, align 8
  store %struct.phm_clock_and_voltage_limits* %1, %struct.phm_clock_and_voltage_limits** %4, align 8
  %8 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %9 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %8, i32 0, i32 1
  %10 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %9, align 8
  store %struct.smu8_hwmgr* %10, %struct.smu8_hwmgr** %5, align 8
  %11 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %5, align 8
  %12 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %11, i32 0, i32 0
  store %struct.smu8_sys_info* %12, %struct.smu8_sys_info** %6, align 8
  %13 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %14 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load %struct.phm_clock_voltage_dependency_table*, %struct.phm_clock_voltage_dependency_table** %15, align 8
  store %struct.phm_clock_voltage_dependency_table* %16, %struct.phm_clock_voltage_dependency_table** %7, align 8
  %17 = load %struct.phm_clock_voltage_dependency_table*, %struct.phm_clock_voltage_dependency_table** %7, align 8
  %18 = getelementptr inbounds %struct.phm_clock_voltage_dependency_table, %struct.phm_clock_voltage_dependency_table* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp sgt i32 %19, 0
  br i1 %20, label %21, label %51

21:                                               ; preds = %2
  %22 = load %struct.phm_clock_voltage_dependency_table*, %struct.phm_clock_voltage_dependency_table** %7, align 8
  %23 = getelementptr inbounds %struct.phm_clock_voltage_dependency_table, %struct.phm_clock_voltage_dependency_table* %22, i32 0, i32 1
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %23, align 8
  %25 = load %struct.phm_clock_voltage_dependency_table*, %struct.phm_clock_voltage_dependency_table** %7, align 8
  %26 = getelementptr inbounds %struct.phm_clock_voltage_dependency_table, %struct.phm_clock_voltage_dependency_table* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = sub nsw i32 %27, 1
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i64 %29
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.phm_clock_and_voltage_limits*, %struct.phm_clock_and_voltage_limits** %4, align 8
  %34 = getelementptr inbounds %struct.phm_clock_and_voltage_limits, %struct.phm_clock_and_voltage_limits* %33, i32 0, i32 2
  store i32 %32, i32* %34, align 4
  %35 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %36 = load %struct.phm_clock_voltage_dependency_table*, %struct.phm_clock_voltage_dependency_table** %7, align 8
  %37 = getelementptr inbounds %struct.phm_clock_voltage_dependency_table, %struct.phm_clock_voltage_dependency_table* %36, i32 0, i32 1
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %37, align 8
  %39 = load %struct.phm_clock_voltage_dependency_table*, %struct.phm_clock_voltage_dependency_table** %7, align 8
  %40 = getelementptr inbounds %struct.phm_clock_voltage_dependency_table, %struct.phm_clock_voltage_dependency_table* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = sub nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i64 %43
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = trunc i64 %46 to i32
  %48 = call i32 @smu8_convert_8Bit_index_to_voltage(%struct.pp_hwmgr* %35, i32 %47)
  %49 = load %struct.phm_clock_and_voltage_limits*, %struct.phm_clock_and_voltage_limits** %4, align 8
  %50 = getelementptr inbounds %struct.phm_clock_and_voltage_limits, %struct.phm_clock_and_voltage_limits* %49, i32 0, i32 1
  store i32 %48, i32* %50, align 4
  br label %51

51:                                               ; preds = %21, %2
  %52 = load %struct.smu8_sys_info*, %struct.smu8_sys_info** %6, align 8
  %53 = getelementptr inbounds %struct.smu8_sys_info, %struct.smu8_sys_info* %52, i32 0, i32 0
  %54 = load i32*, i32** %53, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 0
  %56 = load i32, i32* %55, align 4
  %57 = load %struct.phm_clock_and_voltage_limits*, %struct.phm_clock_and_voltage_limits** %4, align 8
  %58 = getelementptr inbounds %struct.phm_clock_and_voltage_limits, %struct.phm_clock_and_voltage_limits* %57, i32 0, i32 0
  store i32 %56, i32* %58, align 4
  ret i32 0
}

declare dso_local i32 @smu8_convert_8Bit_index_to_voltage(%struct.pp_hwmgr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
